# igcl-rest-handler

./: CMakeLists.txt  README.md  cApiWrapper.cpp  http_server.cpp  http_server.hpp  http_server_async.cpp  json_body.hpp  main.cpp
device/: device.hpp  device.md  device_handle.cpp
device/fan/: fan.md
device/freq/: frequency.md
device/temp/: temp.hpp  temp_handle.cpp  temperature.md
